<resources>
    <string name="app_name">Calendar</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="yearMonth">%d / %d</string>
    <string name="pickerTitle">Year / Month</string>
</resources>