<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="calendarViewModel"
            type="com.example.calendar.CalendarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/btn_prev_month"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/btn_prev_month"
                android:onClick="@{() -> calendarViewModel.prevMonth()}"
                tools:ignore="ContentDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_month"
                app:layout_constraintBottom_toBottomOf="@id/tv_month"/>

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                nowYear="@{calendarViewModel.textYear}"
                nowMonth="@{calendarViewModel.textMonth}"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageButton
                android:id="@+id/btn_select_month"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/btn_select_month"
                tools:ignore="ContentDescription"
                app:layout_constraintStart_toEndOf="@id/tv_month"
                app:layout_constraintTop_toTopOf="@id/tv_month"
                app:layout_constraintBottom_toBottomOf="@id/tv_month"/>

            <ImageButton
                android:id="@+id/btn_next_month"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_next_month"
                android:onClick="@{() -> calendarViewModel.nextMonth()}"
                tools:ignore="ContentDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_month"
                app:layout_constraintBottom_toBottomOf="@id/tv_month"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_day_of_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="7"
            app:layout_constraintTop_toBottomOf="@id/layout_month"
            app:layout_constraintStart_toStartOf="@id/layout_month"
            app:layout_constraintEnd_toEndOf="@id/layout_month">

            <TextView
                android:text="@string/sunday"
                style="@style/Sunday" />

            <TextView
                android:text="@string/monday"
                style="@style/Weekday" />

            <TextView
                android:text="@string/tuesday"
                style="@style/Weekday" />

            <TextView
                android:text="@string/wednesday"
                style="@style/Weekday" />

            <TextView
                android:text="@string/thursday"
                style="@style/Weekday" />

            <TextView
                android:text="@string/friday"
                style="@style/Weekday" />

            <TextView
                android:text="@string/saturday"
                style="@style/Saturday" />
        </LinearLayout>

        <View
            android:id="@+id/underline"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/layout_day_of_week"
            app:layout_constraintStart_toStartOf="@id/layout_day_of_week"
            app:layout_constraintEnd_toEndOf="@id/layout_day_of_week" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_calendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            setDays="@{calendarViewModel.calendarData}"
            setCalendarViewModel="@{calendarViewModel}"
            setCalendar="@{calendarViewModel.setCalendar}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="7"
            app:layout_constraintTop_toBottomOf="@id/underline"
            app:layout_constraintStart_toStartOf="@id/layout_day_of_week"
            app:layout_constraintEnd_toEndOf="@id/layout_day_of_week" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_now_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/btn_now_month"
            android:onClick="@{() -> calendarViewModel.nowMonth()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>